# LabProgToDoListMarcoRF

./: .gitignore  CMakeLists.txt  Date.cpp  Date.h  FileController.cpp  FileController.h  TodoItem.cpp  TodoItem.h  TodoTextFile.txt  Todolist.cpp  Todolist.h  main.cpp
test/: CMakeLists.txt  DateTest.cpp  FileControllerFixture.cpp  FileControllerTest.cpp  TodoItemTest.cpp  TodolistFixture.cpp  TodolistTest.cpp  runAllTests.cpp
